# windows-drivers-rs

./: .gitignore  Cargo.toml  Makefile.toml  rust-driver-makefile.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  cargo-audit.yaml  code-formatting-check.yaml  codeql.yaml  docs.yaml  github-dependency-review.yaml  hyperv-tests.yaml  lint.yaml  local-development-makefile.yaml  test.yaml  winget-catalog-test.yaml
tools/.github/: lib.rs  (+1 more)
tools/driver-test-cli/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
tools/driver-test-cli/docs/: debug-output.md  echo-testing.md  error-handling.md  installation.md  parser-notes.md  phase3-completion.md  release.md  repository-detection.md  troubleshooting.md  user-guide.md
tools/driver-test-cli/examples/echo-driver-test/: README.md
tools/driver-test-cli/poc/: README.md  poc-1-vm-discovery.ps1  poc-2-snapshot.ps1  poc-3-filecopy.ps1  poc-4-psdirect.ps1  poc-5-pnputil.ps1  poc-6-cert.ps1  poc-7-debugview.ps1  poc-8-detection.rs  poc-8-run.ps1
tools/driver-test-cli/specs/: consensus.md  requirements.md  review-correctness-gpt.md  review-correctness-sonnet.md  review-correctness.md  review-security-opus.md  review-security.md  review-ux-gpt.md  review-ux.md  review-windows-gemini.md  review-windows-systems-gpt.md  review-windows-systems.md
tools/driver-test-cli/src/: cli.rs  config.rs  debug.rs  deploy.rs  detect.rs  driver_detect.rs  echo.rs  echo_test.rs  errors.rs  lib.rs  main.rs  output.rs  package.rs  ps.rs  vm.rs
tools/driver-test-cli/tests/: cli_help.rs  debug_capture.rs  debug_integration.rs  deploy_cli.rs  deploy_integration.rs  deployment.rs  detect_driver.rs  echo_driver_test.rs  hyperv_integration.rs  pnputil_parse.rs  samples_repo_test.rs  vm_ops.rs
(+53 files in other folders)
