[package]
name = "driver-test-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["windows-drivers-rs contributors"]
keywords = ["windows", "driver", "hyper-v", "testing"]
categories = ["development-tools"]
description = "Rust CLI tool to automate Windows driver build, deployment, and verification in Hyper-V test VMs."
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
toml = "0.8"
regex = "1.10"
walkdir = "2.5"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
insta = { version = "1.40", features = ["yaml"] }

[features]
# Future: parallel for multi-VM operations
parallel = []

[package.metadata]
# Reserved for future internal metadata
